<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="saveBtnClicked"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="Word"
                android:inputType="textShortMessage|text"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/pronunciation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:hint="Pronunciation"
                android:imeOptions="actionDone"
                android:inputType="textPhonetic"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toStartOf="@+id/pronunciation_suggest_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/word" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pronunciation_suggest_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/pronunciation_auto_ipa_content_description"
                android:minWidth="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/pronunciation_auto_ipa"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/pronunciation"
                app:layout_constraintEnd_toStartOf="@+id/pronunciation_apply_btn"
                app:layout_constraintTop_toTopOf="@+id/pronunciation" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pronunciation_apply_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pronunciation_use_ipa_content_description"
                android:enabled="false"
                android:minWidth="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/pronunciation_use_ipa"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/pronunciation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pronunciation" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/pronunciation_row_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="pronunciation,pronunciation_suggest_btn,pronunciation_apply_btn" />

            <TextView
                android:id="@+id/pronunciation_baseline_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textAppearance="?attr/textAppearanceCaption"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pronunciation_row_bottom"
                tools:text="Engine IPA from headword: ta"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/pronunciation_deviation_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/pronunciation_deviation_hint"
                android:textAppearance="?attr/textAppearanceCaption"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pronunciation_baseline_caption"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/pronunciation_deviation_strip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pronunciation_deviation_hint"
                tools:text="tɑ"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/partOfSpeech"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="Part of Speech"
                android:imeOptions="actionDone"
                android:inputType="textPhonetic"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pronunciation_deviation_strip" />

            <EditText
                android:id="@+id/definition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="top|left"
                android:hint="Definition"
                android:imeOptions="actionDone"
                android:inputType="textLongMessage|textCapSentences|textMultiLine"
                android:minHeight="96dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partOfSpeech" />

            <EditText
                android:id="@+id/etymology"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="Etymology"
                android:imeOptions="actionDone"
                android:inputType="textPhonetic"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/definition" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
